--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.6",
   "description": "",
   "main": "./build/index.js",
-  "types": "./build./index.d.ts",
+  "types": "./build/index.d.ts",
   "files": [
-    "./build/**/*"
+    "build/**/*"
   ],
   "scripts": {
     "clean": "del ./build/*",
